2010-02-02  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/eigs.cc, DLD-FUNCTIONS/qr.cc: Use testif to only run
	some sparse tests when necessary libraries are installed.

2011-02-03  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.cc (axes::properties::update_axes_layout):
	New function calculating axes layout.
	(axes::properties::update_ticklengths): New function calculating
	tick lengths and offsets.
	* graphics.h.in (class axes::properties):: New private data
	describing axes layout and corresponding "get" methods. Provide
	declaration and call dependencies for "update_axes_layout".
	Tag layer, yaxislocation, xaxislocation, tickdir, tickdirmode,
	with "u" qualifier.
	(axes::properties::update_layer,
	axes::properties::update_yaxislocation,
	axes::properties::update_xaxislocation,
	axes::properties::update_ticklengths,
	axes::properties::update_tickdir,
	axes::properties::update_tickdirmode): New functions
	* gl-render.cc:	(opengl_renderer::draw_axes_planes,
	opengl_renderer::draw_axes_boxes,
	opengl_renderer::draw_axes_x_grid,
	opengl_renderer::draw_axes_y_grid,
	opengl_renderer::draw_axes_z_grid,
	opengl_renderer::draw_axes_title): Simplify arguments list.
	(opengl_renderer::draw_axes): Remove calculation of axes layout.
	(opengl_renderer::setup_opengl_transformation): Disable antializing.
	* gl-render.h: Adapt functions prototypes.

2011-02-01  John W. Eaton  <jwe@octave.org>

	* gl-render.h (opengl_renderer::draw (const Matrix& hlist)):
	Use get_object instead of lookup.
	* DLD-FUNCTIONS/__init_fltk__.cc (Fl_Gl_Window::draw): Likewise.
	* graphics.h.in (gh_manager::get_object (double)): New function.
	* gl-renderer.h (opengl_renderer::draw (const graphics_handle&)):
	Delete.
	* gl2ps-renderer.h (glps_renderer::draw (const graphics_handle&)):
	Delete.

2011-02-01  John W. Eaton  <jwe@octave.org>

	* gl2ps-renderer.h: Remove virtual tag for derived virtual functions.
	(opengl_renderer (const graphics_handle&)): New function.